# wip_pj

./: .gitignore  README.md
bringup/: CMakeLists.txt  package.xml
bringup/launch/: execute_balance_control.launch.py  spawn_wip_model.launch.py  start_process.launch.py
control/: CMakeLists.txt  package.xml
control/config/: controller_params.yaml
control/src/: balance_controller.cpp
model/: CMakeLists.txt  package.xml
model/config/: controller.yaml  model_params.yaml
model/model/: gazebo_tag.urdf.xacro  joint_definition.xacro.urdf  link_definition.xacro.urdf  model.xacro.urdf
model/world/: modified_ode_engin.sdf
